# emClarity_private

./: .github-workflows-example.yml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GUI_IMPLEMENTATION_SUMMARY.md  MANIFEST.in  PYTHON_STYLE_GUIDE.md  README.md  README_GUI.md  emClarity_Tutorial.md  history.jsonl  pyproject.toml  setup-dev-env.sh  setup-dev.sh  setup.cfg  setup.py  test_param.m  test_pixel_size_update.py  test_pixel_size_workflow.py
.devcontainer/: .MakeParticleStack.dff  check-version.sh  configure-git.sh  devcontainer.json  launch-container.py  post-create.sh  validate-x11.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  code-style.yml  gpu-tests.yml  python-quality.yml  security-scan.yml  security.yml  type-checking.yml  unit-tests.yml
@MRCImage/: SAVE_IMG.m  checkFullFile.m
alignment/: BH_alignRaw3d_v2.m  BH_runAutoAlign.m  BH_templateSearch3d_2.m  emC_autoAlign
autonomous-build/: .gitignore  COMPONENT_LOG.md  QUICKSTART.md  README.md  SETUP.md  TODO.md  claude-launcher.sh  config.example.json  oracle.py  orchestrator.py  requirements.txt  reset_historian_test.sh  task_splitter.py
autonomous-build/hooks/: pre-commit-hook.sh  stop-hook.sh
autonomous-build/img_cache/: INDEX.md  Overview_panel.md  cistem_gui_architecture.md
autonomous-build/memories/: MEMORY.md  claude_cli_patterns.md  orchestrator_tuning.md  phase_0_notes.md  three_phase_architecture.md
autonomous-build/prompts/: developer-prompt.md  historian-prompt.md  qa-prompt.md
autonomous-build/templates/: baseline.json  prd.json
backend/: __init__.py  main.py  requirements.txt
backend/api/: jobs.py  parameters.py  projects.py  router.py  system.py  v1_environment.py  v1_filesystem.py  v1_jobs.py  v1_parameters.py  v1_projects.py  v1_system.py  v1_utilities.py  v1_viewer.py  v1_workflow.py  workflow.py
backend/models/: __init__.py  base.py  job.py  parameter.py  pipeline.py  project.py  project_settings.py  workflow.py
backend/services/: __init__.py  job_service.py  parameter_service.py  project_service.py  system_service.py  workflow_service.py
backend/tests/: conftest.py  test_detect_best_resolution.py  test_filesystem.py  test_filesystem_entry_path_contract.py  test_parameters.py  test_projects.py  test_safe_json.py
backend/utils/: machine_config.py  safe_json.py
backups/: .claude.json.backup.1774288632621  .claude.json.backup.1774288633416  .claude.json.backup.1774288736093
coordinates/: BH_defineMatrix.m  BH_multi_iterator.m  BH_multi_recGeom.m  eulerSearch.m
ctf/: BH_ctfCalc.m  BH_ctf_Correct3d.m  BH_ctf_Estimate.m  BH_ctf_Refine2.m  BH_ctf_Updatefft.m  BH_runCtfFind.m  EMC_ctf_refine_from_star.m  EMC_tlt_get_projection_values.m
docs/: LINTING_MIGRATION_GUIDE.md  gen_param.m  gui-testing-guide.md  param_aug2025.m
docs/context/: MAIN_CONTEXT.md  README.md  copilot-instructions.md  python_conversion_instructions.md
frontend/: COMPONENT_LOG.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  constants.ts  index.css
gui/: PARAMETER_GUIDE.md  README.md  __init__.py  assets_panel.py  autoalign_widget.py  backup_20250828_122339.db  emclarity_gui_state.db  index.html  launcher.py  main.py  parameter_config.json  parameter_loader.py  parameters_new.py  profile_widgets.py  project_dialog.py  requirements.txt  rubber_band_tool.py  run_gui.sh  settings_panel.py  sidebar_layout.py  state_manager.py  temp_methods.py  test_collapsible.py  test_gui.py  tilt_series_assets.py  top_toolbar.py  vite.config.ts  workflow.py  workflow_widgets_new.py
gui/prompts/: context.txt
logicals/: BH_isWindowValid.m  BH_multi_checkGPU.m  BH_multi_parallelJobs.m  EMC_assert_deprecated_substitution.m
masking/: BH_bandLimitCenterNormalize.m  BH_bandpass3d.m  BH_mask3d.m  BH_weightMaskMex.m  BH_weightMask_dpRUN.m
metaData/: BH_combineProjects.m  BH_geometryAnalysis.m  BH_geometryInitialize.m  BH_loadSubTomoMeta.m  BH_parseParameterFile.m  BH_plotMultiCycleFSC.m  BH_rawAlignmentsApply.m  BH_removeDuplicates.m  BH_safeCopyMatFile.m  BH_saveSubTomoMeta.m  BH_skipClassAlignment.m  BH_subTomoMeta.m  BH_subTomoMeta_io.m  EMC_checkCacheForFile.m  EMC_get_class_idx.m  EMC_parpool.m  EMC_setCacheForFile.m  EMC_setup_tmp_cache.m  METADATA_REFACTOR_PLAN.md  OPEN_IMG.m  WRAPPER_USAGE.md  emc_check_for_valid_image_file.m
mexFiles/: mexCTF.cu  mexCompile.m  mexFP16.cu  mexSF3D.cu  mexXform2d.cu
plugins/: blocklist.json
python/: .coverage  .pre-commit-config.yaml  INSTALL.md  Makefile  README.md  __init__.py  check_environment.py  conftest.py  coverage.xml  debug_transpose.py  debug_transpose_manual.py  demo_conversion.py  parameters.py  pytest.ini  requirements-dev.txt  requirements-gpu.txt  requirements-gui.txt  requirements.txt  setup.py  test_runner.py  validate_json_params.py  workflow_summary.py
scripts/: check-python-quality.sh
statistics/: BH_clusterPub.m  BH_fscGold_class.m  BH_fscSplit.m  BH_multi_cRef_Vnorm.m  BH_multi_cRef_wgtCritical.m  BH_pcaPub.m
synthetic/: BH_synthetic_mapBack.m  BH_to_cisTEM_mapBack.m  EMC_generate_projections.m  EMC_generate_synthetic_tltFile.m  EMC_refine_tilt_ctf.m  EMC_setup_synthetic_project.m  EMC_syntheticTomogram.m  EMC_syntheticTomogram_starfile.m  MULTI_GPU_PLAN.md  emc_estimate_slice_batch_size.m
templates/: progress.txt
testScripts/: BH_benchmark.m  EMC_assert_string_value.m  adamOptimizer.m  analyze_compilation.py  compare_star_files.m  emClarity.m  emc_to_cpp.md  fourierTransformer.m  interpolator.m  mCompile.sh  optimize_gmm_weights.m  test_adamOptimizer.m  test_ctf_refine_roundtrip.m  test_fourier_upsample.m
tests/: conftest.py  test_job_management.py  test_parameter_schema.py  test_parameter_validation.py  test_project_management.py  test_system_info.py  test_workflow_state.py
transformations/: BH_average3d.m  BH_montage4d_halfGrid.m  BH_multi_combineLowResInfo.m  BH_multi_loadOrBuild.m
(+349 files in other folders)
