[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emclarity"
version = "1.7.0"
description = "Python conversion of emClarity cryo-EM processing toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "emClarity Development Team"},
]
keywords = ["cryo-em", "electron-microscopy", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "PySide6>=6.0.0",
    "matplotlib>=3.0.0",
    "psutil>=7.0.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
gpu = ["cupy>=12.0.0", "fastrlock>=0.8.0"]
dev = [
    "pytest>=6.0.0",
    "pytest-qt>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.330",
    "bandit[toml]>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=2.15.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-qt>=4.0.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
emclarity-gui = "gui.main:main"

[project.urls]
"Homepage" = "https://github.com/StochasticAnalytics/emClarity"
"Bug Reports" = "https://github.com/StochasticAnalytics/emClarity/issues"
"Source" = "https://github.com/StochasticAnalytics/emClarity"

[tool.setuptools.package-data]
"cuda_ops" = ["*.cu", "*.cuh"]
"ctf.cuda" = ["*.cu", "*.cuh"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Enable comprehensive rule sets
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "N",     # pep8-naming
    "C90",   # mccabe
    "PIE",   # flake8-pie
    "SIM",   # flake8-simplify
    "T20",   # flake8-print
    "PD",    # pandas-vet
    "PL",    # Pylint
    "RUF",   # Ruff-specific rules
    "D",     # pydocstyle
]
ignore = [
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D212",  # Multi-line docstring summary should start at the first line (conflicts with D213)
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "T201",  # print found (for development)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["emclarity", "gui", "metaData", "coordinates", "ctf", "alignment", "masking", "transformations", "statistics", "synthetic", "logicals", "optimizers", "refinement"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

# Pyright configuration for static type checking
[tool.pyright]
include = ["python"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
defineConstant = { DEBUG = true }
stubPath = "typings"
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"
executionEnvironments = [
  { root = "python" }
]

# Bandit security linting configuration
[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]  # Skip assert_used and shell=True warnings for now

[tool.pytest.ini_options]
testpaths = ["python"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
